Fixed bug with overlapping table in order import view

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -74,6 +74,7 @@ nav.sidebar, .main{
     margin-bottom: 0px;
     position:fixed;
     margin-left: 0px;
+    z-index:1;
   }
 
   nav.sidebar li {
